--- a/SpringEventBasic/pom.xml
+++ b/SpringEventBasic/pom.xml
@@ -39,9 +39,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+    <groupId>commons-beanutils</groupId>
+    <artifactId>commons-beanutils</artifactId>
+    <version>1.9.4</version>
+</dependency>
+		
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<version>8.0.21</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
